snapshots/syntax/library/functions/datetime/datevalue/datevalue_database_field.snap
---
source: vb6parse/src/syntax/library/functions/datetime/datevalue.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Identifier
      text: rs
    - kind: Unknown
      text: (
    - kind: Unknown
      text: "\"DateField\""
    - kind: Unknown
      text: )
    - kind: Whitespace
      text: " "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: EqualityOperator
              text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: DateValue
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: importedDate
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
